--- a/glossario.html
+++ b/glossario.html
@@ -12,12 +12,18 @@
     <dl>
         <dt><b>!DOCTYPE html</b></dt>
         <dd>Define o tipo do documento como HTML5</dd>
+
         <dt><b>html</b></dt>
         <dd>Define um documento HTML</dd>
+
         <dt><b>head</b></dt>
         <dd>Container para metadados, título da página, links...</dd>
+
         <dt><b>body</b></dt>
         <dd>Corpo do documento</dd>
+
+        <dt><b>fieldset</b></dt>
+        <dd>Agrupa todos os controles do formulário para dar uma aparência estruturada</dd>
     </dl>
 </body>
 </html>
